fix on the layout

--- a/index.html
+++ b/index.html
@@ -26,7 +26,9 @@
             <div class="gs-carousel-item">
                 <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect">
             </div>
-            
+            <div class="gs-carousel-item">
+                <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect">
+            </div>
         </div>
     </div>
 
