--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
     <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.3.0/css/all.min.css" integrity="sha512-SzlrxWUlpfuzQ+pcUCosxcglQRNAq/DZjVsC0lE40xsADsfeQoEypE+enwcOiGjk/bSuGGKHEyjSoQ1zVisanQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <title>Document</title>
 </head>
 <body class="vh-100 d-flex justify-content-center align-items-center">
@@ -13,7 +14,7 @@
         <div class="gs-slide w-75">
             <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover">
         </div>
-        <div class="gs-carousel w-25 h-100 ">
+        <div class="gs-carousel w-25 h-100 position-relative d-flex flex-column">
             <div class="gs-carousel-item">
                 <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect active">
             </div>
@@ -29,6 +30,12 @@
             <div class="gs-carousel-item">
                 <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect">
             </div>
+            <button class="previous position-absolute top-0 align-self-center border-0 bg-transparent text-primary fs-2">
+                <i class="fa-solid fa-chevron-up"></i>
+            </button>
+            <button class="next position-absolute bottom-0 align-self-center border-0 bg-transparent text-primary fs-2">
+                <i class="fa-solid fa-chevron-down"></i>
+            </button>
         </div>
     </div>
 
