carousel scrolling done

--- a/index.html
+++ b/index.html
@@ -12,28 +12,13 @@
 <body class="vh-100 d-flex justify-content-center align-items-center">
     <div class="gs-container d-flex">
         <div class="gs-slide w-75">
-            <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover">
+            
         </div>
         <div class="gs-carousel w-25 h-100 position-relative d-flex flex-column">
-            <div class="gs-carousel-item">
-                <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect active">
-            </div>
-            <div class="gs-carousel-item">
-                <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect">
-            </div>
-            <div class="gs-carousel-item">
-                <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect">
-            </div>
-            <div class="gs-carousel-item">
-                <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect">
-            </div>
-            <div class="gs-carousel-item">
-                <img src="./img/01.webp" alt="" class="w-100 h-100 object-fit-cover gs-img-effect">
-            </div>
-            <button class="previous position-absolute top-0 align-self-center border-0 bg-transparent text-primary fs-2">
+            <button class="previous position-absolute top-0 align-self-center border-0 bg-transparent text-primary fs-2 z-3">
                 <i class="fa-solid fa-chevron-up"></i>
             </button>
-            <button class="next position-absolute bottom-0 align-self-center border-0 bg-transparent text-primary fs-2">
+            <button class="next position-absolute bottom-0 align-self-center border-0 bg-transparent text-primary fs-2 z-3">
                 <i class="fa-solid fa-chevron-down"></i>
             </button>
         </div>
